--- a/Rmd_with_meta.html
+++ b/Rmd_with_meta.html
@@ -211,31 +211,8 @@ $(document).ready(function () {
 <div id="lets-embed-some-r-code" class="section level1">
 <h1>Let’s embed some R code</h1>
 <p>We’ll write an R chunk here that loads the tidyverse library and then reads in the gapminder dataset from our project directory.</p>
-<pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ──────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.2.1 ──</code></pre>
-<pre><code>## ✔ ggplot2 3.1.0       ✔ purrr   0.3.1  
-## ✔ tibble  2.0.1       ✔ dplyr   0.8.0.1
-## ✔ tidyr   0.8.3       ✔ stringr 1.4.0  
-## ✔ readr   1.3.1       ✔ forcats 0.4.0</code></pre>
-<pre><code>## ── Conflicts ─────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
-## ✖ dplyr::filter() masks stats::filter()
-## ✖ dplyr::lag()    masks stats::lag()</code></pre>
-<pre class="r"><code>gm &lt;- read_csv(&quot;gapminder.csv&quot;)</code></pre>
-<pre><code>## Parsed with column specification:
-## cols(
-##   c_id = col_double(),
-##   country = col_character(),
-##   continent = col_character(),
-##   year = col_double(),
-##   pets_per_thou = col_character(),
-##   lifeexp = col_double(),
-##   population = col_double(),
-##   gdp_per_cap = col_double(),
-##   trans_deaths = col_double(),
-##   resp_deaths = col_double(),
-##   ext_deaths = col_character(),
-##   total_perthou = col_double()
-## )</code></pre>
+<pre class="r"><code>library(tidyverse)
+gm &lt;- read_csv(&quot;gapminder.csv&quot;)</code></pre>
 </div>
 <div id="investigate-gm" class="section level1">
 <h1>Investigate gm</h1>
